# DeepSeek-From-Scratch

./: README.md  main.py  pyproject.toml  requirements.txt  template.py
Ch01_Attention_Mechanism/: 02_Byte_Pair_Encoding.ipynb  05_Self_Attention.ipynb
Chapter01/: 01_Tokenization.ipynb  03_Data_Loader.ipynb  04_Embeddings.ipynb  06_Causal_Attention.ipynb  07_Multihead_Attention.ipynb
