[project]
name = "deepseek-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bertviz==1.4.1",
    "safetensors==0.4.5",
    "tiktoken==0.9.0",
    "torch==2.4.1",
    "transformers==4.46.3",
    "triton==3.0.0",
]
